--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,5 +2,6 @@
 # 数据源配置，请修改为你项目的实际配置
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.filters=stat,log4j
